Index edit test

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
         <div id="wrapper">
-            <h1>Hello, traveler!</h1>
+            <h1>Hewwo, traveler!</h1>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel purus risus. Sed accumsan viverra turpis, quis tempor ipsum ornare vel. Etiam vitae bibendum leo, fermentum blandit enim. Ut accumsan sit amet felis a consectetur. Fusce felis odio, convallis eu tempus varius, luctus a lorem. Fusce porta consequat dui eu consequat. Sed sagittis hendrerit purus, ut pellentesque augue. </p>
             <p> Donec accumsan iaculis metus, vel consequat lectus varius sed. Sed ullamcorper laoreet nisl in commodo. Nullam faucibus non libero sit amet placerat. Aenean ornare ipsum augue, eget pellentesque justo gravida nec. Proin id libero eu turpis venenatis consequat ac sed justo. Proin faucibus libero urna, in hendrerit velit sagittis id. Sed interdum vel enim egestas tempus. Suspendisse semper orci ligula, eu sollicitudin nibh faucibus eu. </p>
             <a href="think.html"> Think on it.</a>
